--- a/css/styles.css
+++ b/css/styles.css
@@ -9,18 +9,20 @@
   --bacground-team: #f5f4fa;
   --primary-text-color: #757575;
   --footer-text-color: rgba(255, 255, 255, 0.6);
-
 }
-/* *:hover,
+*:hover,
 *:focus{
-  transition: background-color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 4500ms linear cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 *{
-transition: background-color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
-transition: color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
 p {
   margin: 0;
 }
@@ -61,6 +63,7 @@ nav {
   margin: 0 auto;
 }
 .container.header {
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
@@ -93,17 +96,22 @@ header {
   background-color: var(--background-color);
 }
 /* navigation */
-.header {
+.header-list {
   display: flex;
-}
-.header .link:not(:last-child) {
+  
+ }
+.header-list .link:not(:last-child) {
   margin-right: 50px;
+}
+.link{
+  position: relative;
 }
 .header-contacts:not(:last-child) {
   margin-right: 30px;
 }
 .choise,
 .active {
+  padding: 32px 0;
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
@@ -111,8 +119,17 @@ header {
   letter-spacing: 0.02em;
   color: var(--header-text-color);
 }
+.navigation-line{
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background: #2196F3;
+  border-radius: 2px;
+  bottom: -32px;
+  }
 .active {
   color: var(--blue-color);
+  border-radius: 2px;
 }
 .choise:hover,
 .choise:focus {
@@ -171,24 +188,25 @@ header {
   border-radius: 4px;
 }
 .button-modal{
-  position: absolute;
+  position: absolute; 
   right: 8px;
   top: 8px;
   height: 30px;
   width: 30px;
   border-radius: 50%;
-   border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
-  
-  }
-  .close-icon{
-    width: 18px;
-    height: 18px;
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    contain: content; */
-  }
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+ .close-icon{
+   width: 18px;
+   height: 18px;
+  fill: #000000;
+}
 .hero {
   display: flex;
   flex-direction: column;
@@ -365,7 +383,7 @@ position: relative;
   width: 20px;
   height: 20px;
   fill: #afb1b8;
-  padding: auto;
+  /* padding: auto; */
 }
 .team-link:hover .team-icon,
 .team-link:focus .team-icon {
@@ -556,7 +574,7 @@ footer .container {
   font-size: 18px;
   line-height: 2;
 }
-.list p {
+.list .projeckt-type {
   font-size: 16px;
   line-height: 1.88;
   color: var(--primary-text-color);
@@ -565,4 +583,35 @@ footer .container {
 .projeckt-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    
+}
+.projeckt-item:hover .hidden-description,
+.projeckt-item:focus .hidden-description{
+transform: translateY(0);
+}
+.overflow{
+position: relative;
+overflow: hidden;
+}
+.description{
+  padding: 0 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  text-align: left;
+}
+.hidden-description{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  height: 294px;
+  position: absolute;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
